fix scrollbar

--- a/src/Timeline/Timeline.css
+++ b/src/Timeline/Timeline.css
@@ -5,7 +5,6 @@
 }
 
 .time-labels-wrapper  {
-    width: 100%;
     display: flex;
     grap:32px;
      overflow-x: auto;
@@ -14,7 +13,6 @@
      background-color: blue;
 }
 .items-content-wrapper {
-    width: 100%;
     display: flex;
     grap:32px;
     overflow-x: auto;
